Add research - numeral

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="libs/jquery-ui.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <base href="/"/>
     <script src="libs/jquery.js"></script>
     <script src="libs/jquery-ui.js"></script>
     <title>Title...</title>
@@ -13,7 +14,7 @@
   <body>
     <div id="app"></div>
     
-    <script src="shared.js"></script>
+    <script src="vendor.js"></script>
     <script src="init.js"></script>
     <script src="html-app.js"></script>
   </body>
