--- a/public/200.html
+++ b/public/200.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <base href="/"/>
+    <link rel="stylesheet" type="text/css" href="vendor.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <title>Title...</title>
+    <title>SSENKIT</title>
   </head>
   
   <body>
@@ -17,5 +16,5 @@
   <script src="vendor.js"></script>
   <script src="style.js"></script>
   <!-- And if you use css themes you need require add their js files. -->
-  <script src="html-showcase.js"></script>
+  <script src="app.js"></script>
 </html>
